# student-management-system

./: Cargo.toml  README.md  college.db
src/: main.rs
src/auth/: admin.rs  authentication.rs  common_models.rs  mod.rs  user.rs
src/auth/authentication/: auth_models.rs
src/routes/: mod.rs  utils.rs
src/routes/admin/: admin_get_application_details.rs  admin_get_details.rs  admin_post_status.rs  admin_update_details.rs  mod.rs
src/routes/user/: apply_application.rs  get_application_details.rs  get_details.rs  mod.rs  update_details.rs
