[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.8.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7", features = ["runtime-async-std", "tls-native-tls", "sqlite"] }
